udpating readme and adding work section

--- a/index.html
+++ b/index.html
@@ -66,6 +66,15 @@
               <a href="https://github.com/sophiedeskin/group-project-one" class="btn btn-primary">Go to Github</a>
             </div>
           </div>
+          <br>
+          <div class="card w-100" style="width: 18rem;">
+            <img src="teamprofilegenerator.PNG" class="card-img-top" alt="team-profile-generator">
+            <div class="card-body">
+              <h5 class="card-title">Team Profile Generator</h5>
+              <p class="card-text">Node.js command-line application that takes in information about employees on a software engineering team, then generates an HTML webpage that displays summaries for each person.</p>
+              <a href="https://github.com/sophiedeskin/team-profile-generator" class="btn btn-primary">Go to Github</a>
+            </div>
+          </div>
           <!-- <div class ="container">
             <a href="https://github.com/sophiedeskin/project-2" target="_blank">
                 <img class="quiz" img src="codingjobs.PNG" alt="Coding Jobs"></img>
