--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="card-body">
               <h5 class="card-title">Coding Jobs App</h5>
               <p class="card-text">Job board for coders where users can view, post, apply for, and delete jobs. The app also requires authentication through a login/logout/signup method.</p>
-              <a href="https://github.com/sophiedeskin/project-2" class="btn btn-primary">Go to Github</a>
+              <a href="https://github.com/sophiedeskin/project-2" target="_blank" class="btn btn-secondary">Go to Github</a>
             </div>
           </div>
           <br>
@@ -63,7 +63,7 @@
             <div class="card-body">
               <h5 class="card-title">Musical SoundBored</h5>
               <p class="card-text">Musicboard can be used to record beats tied to keyboard keys. The user can also download the beats they recorded, play it back, and adjust the volume.</p>
-              <a href="https://github.com/sophiedeskin/group-project-one" class="btn btn-primary">Go to Github</a>
+              <a href="https://github.com/sophiedeskin/group-project-one" target="_blank" class="btn btn-secondary">Go to Github</a>
             </div>
           </div>
           <br>
@@ -72,7 +72,7 @@
             <div class="card-body">
               <h5 class="card-title">Team Profile Generator</h5>
               <p class="card-text">Node.js command-line application that takes in information about employees on a software engineering team, then generates an HTML webpage that displays summaries for each person.</p>
-              <a href="https://github.com/sophiedeskin/team-profile-generator" class="btn btn-primary">Go to Github</a>
+              <a href="https://github.com/sophiedeskin/team-profile-generator" target="_blank" class="btn btn-secondary">Go to Github</a>
             </div>
           </div>
           <!-- <div class ="container">
@@ -110,8 +110,9 @@
         <div class="title">
           <h2 id="section-4">My Resume</h2></div>
         <div class="content" id="resumepdf">
-         Please find attached: 
-         <a href="Sophie Deskin Resume.pdf" target="_blank">My Resume</a>
+          <a href="Sophie Deskin Resume.pdf" target="_blank" class="btn btn-secondary" role="button" data-bs-toggle="button" aria-pressed="true">Resume link</a>
+         <!-- Please find attached:  -->
+         <!-- <a href="Sophie Deskin Resume.pdf" target="_blank">My Resume</a> -->
         </div>
        </div>
       </div>
