updating contact info

--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
         <div class="contact-me">
         <div class="title">
           <h2 id="section-3">Contact Me</h2></div>
-        <div class ="content" id="contact-info">
+        <!-- <div class ="content" 
+          id="contact-info">
           Email: <a href="mailto:sophiedeskin@gmail.com">sophiedeskin@gmail.com </a> 
           GitHub: <a href="https://github.com/sophiedeskin" target="_blank">Sophie's Github</a>
           Phone: 
@@ -104,6 +105,12 @@
           804-577-3974 
           <br>
           Linkedin: <a href="https://www.linkedin.com/in/sophie-deskin-0b275396/" target="_blank">Sophie's Linkedin</a>
+        </div> -->
+        <div class="list-group">
+          <a href="mailto:sophiedeskin@gmail.com" class="list-group-item list-group-item-action">Email</a>
+          <a href="https://www.linkedin.com/in/sophie-deskin-0b275396/" target="_blank" class="list-group-item list-group-item-action">Linkedin</a>
+          <a href="https://www.linkedin.com/in/sophie-deskin-0b275396/" target="_blank" class="list-group-item list-group-item-action">Github</a>
+          <button type="button" class="list-group-item list-group-item-action" disabled>Phone: 804-577-3974</button>
         </div>
       </div>
       <div class="resume">
